Force redeploy: ensure build script is present for Render backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Secure backend for ChatGPT integration",
+  "description": "Secure backend for ChatGPT integration. ",
   "main": "dist/server.js",
   "scripts": {
     "start": "node dist/server.js",
