--- a/firebase.json
+++ b/firebase.json
@@ -8,8 +8,12 @@
     ],
     "rewrites": [
       {
-        "source": "/api/**",
-        "destination": "https://prompt-your-way-backend.onrender.com/api/**"
+        "source": "/api/chat/**",
+        "function": "api"
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
       }
     ]
   }
